--- a/ответы.md
+++ b/ответы.md
@@ -251,15 +251,15 @@ end for
 Транзитивное замыкание отношения \( R \) на множестве \( M \) — это наименьшее транзитивное надмножество \( R \). Транзитивное замыкание \( R \) обозначается как \( $R^+ $\).
 
 **Рефлексивное замыкание:**  
-Рефлексивное замыкание отношения \( R \) — это наименьшее рефлексивное надмножество \( R \). Рефлексивное замыкание \( R \) обозначается как \( R^* \).
+Рефлексивное замыкание отношения \( R \) — это наименьшее рефлексивное надмножество \( R \). Рефлексивное замыкание \( R \) обозначается как \($ R^*$ \).
 
 **Определение:**
 - \($ R^+ = \bigcup_{i=1}^{\infty} R^i $\)
 - \($ R^* = \bigcup_{i=0}^{\infty} R^i $\)
 
 **Свойства:**
-- \( R^+ \) — транзитивное замыкание \( R \).
-- \( R^* \) — рефлексивно-транзитивное замыкание \( R \).
+- \( $R^+$ \) — транзитивное замыкание \( R \).
+- \( $R^*$ \) — рефлексивно-транзитивное замыкание \( R \).
 
 ### 1.5.2 Алгоритм Уоршалла
 
@@ -321,7 +321,7 @@ end for
 ### 16. Алгебры и морфизмы, операции и их свойства, таблицы Кэли, гомоморфизмы алгебр (разделы 2.1.1 - 2.1.6)
 
 #### 2.1.1 Операции и их носители
-Операция в алгебре определяется как функция \( \phi : M^n \to M \), где \( M \) - множество, на котором эта операция определяется. В зависимости от арности операции, различают унарные, бинарные и \( n \)-арные операции. Записи для операций могут быть префиксными, инфиксными и постфиксными. Множество \( M \) вместе с набором операций \( \Sigma = \{\phi_1, \ldots, \phi_m\} \) называется алгебраической структурой, универсальной алгеброй или просто алгеброй, записываемой как \( \langle M; \Sigma \rangle \) .
+Операция в алгебре определяется как функция \( $\phi : M^n \to M$ \), где \( M \) - множество, на котором эта операция определяется. В зависимости от арности операции, различают унарные, бинарные и \( n \)-арные операции. Записи для операций могут быть префиксными, инфиксными и постфиксными. Множество \( M \) вместе с набором операций \($ \Sigma = \{\phi_1, \ldots, \phi_m\}$ \) называется алгебраической структурой, универсальной алгеброй или просто алгеброй, записываемой как \( $\langle M; \Sigma \rangle $\) .
 
 #### 2.1.2 Замыкания и подалгебры
 Замкнутое подмножество относительно сигнатуры алгебры — это подмножество, содержащееся в множестве носителя, которое замкнуто относительно всех операций сигнатуры. Если множество \( S \) замкнуто относительно всех операций алгебры, оно является подалгеброй  .
@@ -331,17 +331,17 @@ end for
 
 #### 2.1.4 Свойства операций
 Операции могут обладать различными свойствами, такими как:
-- Ассоциативность: \( (a \cdot b) \cdot c = a \cdot (b \cdot c) \)
-- Коммутативность: \( a \cdot b = b \cdot a \)
-- Дистрибутивность: \( a \cdot (b + c) = (a \cdot b) + (a \cdot c) \)
-- Нейтральный элемент: элемент \( e \), такой что \( a \cdot e = e \cdot a = a \)
-- Обратимый элемент: элемент \( b \), такой что \( a \cdot b = b \cdot a = e \), где \( e \) — нейтральный элемент .
+- Ассоциативность: \( $(a \cdot b) \cdot c = a \cdot (b \cdot c) $\)
+- Коммутативность: \($ a \cdot b = b \cdot a $\)
+- Дистрибутивность: \($ a \cdot (b + c) = (a \cdot b) + (a \cdot c) $\)
+- Нейтральный элемент: элемент \( e \), такой что \($ a \cdot e = e \cdot a = a $\)
+- Обратимый элемент: элемент \( b \), такой что \( $a \cdot b = b \cdot a = e $\), где \( e \) — нейтральный элемент .
 
 #### 2.1.5 Таблицы Кэли
 Таблица Кэли (или таблица умножения) используется для представления бинарных операций на конечных множествах. В таблице строки и столбцы обозначают элементы множества, а на пересечении записывается результат операции. Таблица Кэли для групп обладает свойством латинского квадрата, то есть каждая строка и каждый столбец содержат все элементы множества без повторений  .
 
 #### 2.1.6 Гомоморфизмы и изоморфизмы алгебр
-Гомоморфизм между двумя алгебрами \( \langle M; \Sigma \rangle \) и \( \langle N; \Sigma \rangle \) — это отображение \( f: M \to N \), сохраняющее операции: \( f(\phi(a, b)) = \phi(f(a), f(b)) \). Если гомоморфизм является биекцией, то он называется изоморфизмом. Важные типы морфизмов включают:
+Гомоморфизм между двумя алгебрами \( $\langle M; \Sigma \rangle$ \) и \($ \langle N; \Sigma \rangle $\) — это отображение \($ f: M \to N$ \), сохраняющее операции: \($ f(\phi(a, b)) = \phi(f(a), f(b))$ \). Если гомоморфизм является биекцией, то он называется изоморфизмом. Важные типы морфизмов включают:
 - Мономорфизм (инъективный гомоморфизм)
 - Эпиморфизм (сюръективный гомоморфизм)
 - Эндоморфизм (гомоморфизм алгебры в себя)
@@ -350,100 +350,100 @@ end for
 ### 17. Алгебры с одной операцией, полугруппы, квазигруппы, лупы, моноиды (разделы 2.2.1, 2.2.2, 2.2.5)
 
 #### 2.2.1 Полугруппы
-Полугруппа — это алгебраическая структура \( \langle M; \cdot \rangle \), где \( \cdot \) — ассоциативная бинарная операция: \( (a \cdot b) \cdot c = a \cdot (b \cdot c) \) для всех \( a, b, c \in M \). Полугруппы не обязательно имеют нейтральный элемент  .
+Полугруппа — это алгебраическая структура \($ \langle M; \cdot \rangle$ \), где \($ \cdot$ \) — ассоциативная бинарная операция: \($ (a \cdot b) \cdot c = a \cdot (b \cdot c) $\) для всех \( $a, b, c \in M$ \). Полугруппы не обязательно имеют нейтральный элемент  .
 
 #### 2.2.2 Определяющие соотношения
 Определяющие соотношения — это равенства, которые задают связи между элементами алгебры и определяют её структуру. Например, в полугруппе можно задать определяющее соотношение \( ab = ba \), что означает коммутативность операции  .
 
 #### 2.2.5 Моноиды
-Моноид — это полугруппа с нейтральным элементом \( e \), таким что \( a \cdot e = e \cdot a = a \) для всех \( a \in M \). Моноиды используются для моделирования систем с объединением и идентичностью, например, множества строк с операцией конкатенации и пустой строкой как нейтральным элементом  .
+Моноид — это полугруппа с нейтральным элементом \( e \), таким что \( $a \cdot e = e \cdot a = a$ \) для всех \($ a \in M$ \). Моноиды используются для моделирования систем с объединением и идентичностью, например, множества строк с операцией конкатенации и пустой строкой как нейтральным элементом  .
 
 ### 18. Группы, перестановочные матрицы (разделы 2.2.6 - 2.2.8)
 
 #### 2.2.6 Группы
-Группа — это алгебраическая структура \( \langle G; \cdot \rangle \), в которой выполняются следующие условия:
-- Ассоциативность: \( (a \cdot b) \cdot c = a \cdot (b \cdot c) \)
-- Существование нейтрального элемента \( e \): \( a \cdot e = e \cdot a = a \)
-- Существование обратного элемента \( a^{-1} \): \( a \cdot a^{-1} = a^{-1} \cdot a = e \)
+Группа — это алгебраическая структура \( $\langle G; \cdot \rangle$ \), в которой выполняются следующие условия:
+- Ассоциативность: \($ (a \cdot b) \cdot c = a \cdot (b \cdot c)$ \)
+- Существование нейтрального элемента \( e \): \($ a \cdot e = e \cdot a = a$ \)
+- Существование обратного элемента \$( a^{-1}$ \): \( $a \cdot a^{-1} = a^{-1} \cdot a = e$ \)
 Если операция в группе коммутативна, группа называется абелевой  .
 
 #### 2.2.7 Действие группы на множестве
-Действие группы \( G \) на множестве \( X \) — это отображение \( G \times X \to X \), такое что для всех \( g, h \in G \) и \( x \in X \) выполняются условия:
-- \( e \cdot x = x \)
-- \( (gh) \cdot x = g \cdot (h \cdot x) \)
+Действие группы \( G \) на множестве \( X \) — это отображение \($ G \times X \to X$ \), такое что для всех \($ g, h \in G $\) и \($ x \in X$ \) выполняются условия:
+- \($ e \cdot x = x$ \)
+- \($ (gh) \cdot x = g \cdot (h \cdot x) $\)
 Действие группы позволяет изучать симметрии и преобразования множества .
 
 #### 2.2.8 Группа перестановок
-Группа перестановок \( S_n \) — это группа всех биекций множества из \( n \) элементов. Операция в группе перестановок — композиция функций. Группа перестановок используется для изучения симметрии и имеет фундаментальное значение в теории групп .
+Группа перестановок \($ S_n$ \) — это группа всех биекций множества из \( n \) элементов. Операция в группе перестановок — композиция функций. Группа перестановок используется для изучения симметрии и имеет фундаментальное значение в теории групп .
 
 ### 19. Алгебры с двумя операциями, тропическая математика (разделы 2.3.1 - 2.3.4)
 
 #### 2.3.1 Кольца
-Кольцо — это множество \( R \) с двумя бинарными операциями: сложением \( + \) и умножением \( \cdot \), где \( \langle R; + \rangle \) является абелевой группой, \( \langle R; \cdot \rangle \) — полугруппой, и выполняется дистрибутивность умножения относительно сложения:
-- \( a \cdot (b + c) = (a \cdot b) + (a \cdot c) \)
-- \( (a + b) \cdot c = (a \cdot c) + (b \cdot c) \)
+Кольцо — это множество \( R \) с двумя бинарными операциями: сложением \( + \) и умножением \($ \cdot $\), где \( $\langle R; + \rangle$ \) является абелевой группой, \( $\langle R; \cdot \rangle$ \) — полугруппой, и выполняется дистрибутивность умножения относительно сложения:
+- \( $a \cdot (b + c) = (a \cdot b) + (a \cdot c)$ \)
+- \( $(a + b) \cdot c = (a \cdot c) + (b \cdot c)$ \)
 Кольца используются для обобщения арифметики и изучения структур, включающих сложение и умножение .
 
 #### 2.3.2 Области целостности и тела
 Область целостности — это коммутативное кольцо с единицей, не содержащее делителей нуля: если \( a \cdot b = 0 \), то \( a = 0 \) или \( b = 0 \).
 
- Тело — это коммутативное кольцо с единицей, в котором каждый ненулевой элемент имеет мультипликативный обратный: для любого \( a \neq 0 \) существует \( a^{-1} \), такое что \( a \cdot a^{-1} = a^{-1} \cdot a = 1 \). Примеры тел включают рациональные числа, действительные числа и комплексные числа .
+ Тело — это коммутативное кольцо с единицей, в котором каждый ненулевой элемент имеет мультипликативный обратный: для любого \($ a \neq 0$ \) существует \( $a^{-1} $\), такое что \($ a \cdot a^{-1} = a^{-1} \cdot a = 1 $\). Примеры тел включают рациональные числа, действительные числа и комплексные числа .
 
 #### 2.3.3 Кольца многочленов и матриц
-Кольцо многочленов \( R[x] \) над кольцом \( R \) состоит из всех многочленов с коэффициентами из \( R \). Операции сложения и умножения многочленов выполняются по обычным правилам арифметики многочленов.
-Кольцо матриц \( M_n(R) \) состоит из всех квадратных матриц порядка \( n \) с элементами из \( R \). Операции сложения и умножения матриц выполняются по правилам матричной арифметики .
+Кольцо многочленов \( $R[x]$ \) над кольцом \( R \) состоит из всех многочленов с коэффициентами из \( R \). Операции сложения и умножения многочленов выполняются по обычным правилам арифметики многочленов.
+Кольцо матриц \( $M_n(R)$ \) состоит из всех квадратных матриц порядка \( n \) с элементами из \( R \). Операции сложения и умножения матриц выполняются по правилам матричной арифметики .
 
 #### 2.3.4 Тропическая математика
-Тропическая математика изучает алгебраические структуры, в которых сложение и умножение заменены на операции \( \min \) и \( + \) (или \( \max \) и \( + \)). Тропическая алгебра используется в различных приложениях, включая оптимизацию, комбинаторику и теорию графов  .
+Тропическая математика изучает алгебраические структуры, в которых сложение и умножение заменены на операции \( $\min$ \) и \( + \) (или \( $\max$ \) и \( + \)). Тропическая алгебра используется в различных приложениях, включая оптимизацию, комбинаторику и теорию графов  .
 
 ### 20. Элементарная теория чисел, делимость, простые числа, функция Эйлера (разделы 2.4.1-2.4.4, 2.4.9)
 
 #### 2.4.1. Делимость чисел
-Делимость — это одно из фундаментальных понятий теории чисел. Говорят, что целое число \(a\) делится на целое число \(b\) (обозначается как \(b \mid a\)), если существует целое число \(k\), такое что \(a = bk\). Если \(b\) делит \(a\), то \(b\) называется делителем \(a\).
+Делимость — это одно из фундаментальных понятий теории чисел. Говорят, что целое число \(a\) делится на целое число \(b\) (обозначается как \($b \mid a$\)), если существует целое число \(k\), такое что \(a = bk\). Если \(b\) делит \(a\), то \(b\) называется делителем \(a\).
 
 #### 2.4.2. Наибольший общий делитель и наименьшее общее кратное
-Наибольший общий делитель (НОД) двух чисел \(a\) и \(b\) — это наибольшее число, которое делит и \(a\), и \(b\). НОД обозначается как \(\gcd(a, b)\). Наименьшее общее кратное (НОК) двух чисел \(a\) и \(b\) — это наименьшее положительное число, которое делится на \(a\) и \(b\). НОК обозначается как \(\mathrm{lcm}(a, b)\). Связь между НОД и НОК:
-\[ \gcd(a, b) \times \mathrm{lcm}(a, b) = |a \times b| \]
+Наибольший общий делитель (НОД) двух чисел \(a\) и \(b\) — это наибольшее число, которое делит и \(a\), и \(b\). НОД обозначается как \($\gcd(a, b)$\). Наименьшее общее кратное (НОК) двух чисел \(a\) и \(b\) — это наименьшее положительное число, которое делится на \(a\) и \(b\). НОК обозначается как \($\mathrm{lcm}(a, b)$\). Связь между НОД и НОК:
+\[$ \gcd(a, b) \times \mathrm{lcm}(a, b) = |a \times b| $\]
 
 #### 2.4.3. Линейное представление наибольшего общего делителя
 НОД двух чисел \(a\) и \(b\) можно представить в виде линейной комбинации этих чисел с целыми коэффициентами. То есть существуют такие целые числа \(x\) и \(y\), что:
-\[ \gcd(a, b) = ax + by \]
+\[ $\gcd(a, b) = ax + by$ \]
 Этот результат известен как теорема Безу.
 
 #### 2.4.4. Простые числа
 Простое число — это натуральное число больше 1, которое делится только на 1 и на само себя. Простые числа играют ключевую роль в теории чисел, поскольку они являются "строительными блоками" для всех натуральных чисел (любое натуральное число больше 1 можно представить как произведение простых чисел).
 
 #### 2.4.9. Функция Эйлера
-Функция Эйлера \(\phi(n)\) — это функция, определяющая количество чисел от 1 до \(n\), взаимно простых с \(n\). Важно, что \(\phi\) мультипликативна, то есть если \(\gcd(m, n) = 1\), то:
-\[ \phi(mn) = \phi(m) \times \phi(n) \]
-Если \(n\) разлагается в произведение простых чисел как \(n = p_1^{k_1} p_2^{k_2} \cdots p_m^{k_m}\), то:
-\[ \phi(n) = n \left(1 - \frac{1}{p_1}\right)\left(1 - \frac{1}{p_2}\right) \cdots \left(1 - \frac{1}{p_m}\right) \]
+Функция Эйлера \($\phi(n)$\) — это функция, определяющая количество чисел от 1 до \(n\), взаимно простых с \(n\). Важно, что \($\phi$\) мультипликативна, то есть если \($\gcd(m, n) = 1$\), то:
+\[$ \phi(mn) = \phi(m) \times \phi(n)$ \]
+Если \(n\) разлагается в произведение простых чисел как \($n = p_1^{k_1} p_2^{k_2} \cdots p_m^{k_m}$\), то:
+\[ $\phi(n) = n \left(1 - \frac{1}{p_1}\right)\left(1 - \frac{1}{p_2}\right) \cdots \left(1 - \frac{1}{p_m}\right)$ \]
 
 ### 21. Сравнения, китайская теорема об остатках, вычисления в остаточных классах (разделы 2.4.5-2.4.8)
 
 #### 2.4.5. Сравнения
-Сравнение в теории чисел — это выражение вида \(a \equiv b \pmod{n}\), что означает, что \(a\) и \(b\) дают одинаковый остаток при делении на \(n\). Например, \(17 \equiv 5 \pmod{12}\), так как \(17 - 5\) делится на 12.
+Сравнение в теории чисел — это выражение вида \($a \equiv b \pmod{n}$\), что означает, что \(a\) и \(b\) дают одинаковый остаток при делении на \(n\). Например, \($17 \equiv 5 \pmod{12}$\), так как \(17 - 5\) делится на 12.
 
 #### 2.4.6. Китайская теорема об остатках
-Китайская теорема об остатках утверждает, что если \(n_1, n_2, ..., n_k\) — попарно взаимно простые числа, то для любых целых чисел \(a_1, a_2, ..., a_k\) система сравнений:
-\[
+Китайская теорема об остатках утверждает, что если \($n_1, n_2, ..., n_k$\) — попарно взаимно простые числа, то для любых целых чисел \(a_1, a_2, ..., a_k\) система сравнений:
+$$
 \begin{cases}
 x \equiv a_1 \pmod{n_1} \\
 x \equiv a_2 \pmod{n_2} \\
 \vdots \\
 x \equiv a_k \pmod{n_k}
 \end{cases}
-\]
-имеет единственное решение \(x \pmod{N}\), где \(N = n_1 n_2 \cdots n_k\).
+$$
+имеет единственное решение \($x \pmod{N}$\), где \($N = n_1 n_2 \cdots n_k$\).
 
 #### 2.4.7. Вычисления в остаточных классах
-Остаточные классы по модулю \(n\) — это множество чисел, которые при делении на \(n\) дают одинаковый остаток. Например, классу \(\overline{3}\) по модулю 5 соответствуют числа ..., -7, -2, 3, 8, 13, .... Вычисления в остаточных классах ведутся по правилам сложения, вычитания и умножения этих классов.
+Остаточные классы по модулю \(n\) — это множество чисел, которые при делении на \(n\) дают одинаковый остаток. Например, классу \($\overline{3}$\) по модулю 5 соответствуют числа ..., -7, -2, 3, 8, 13, .... Вычисления в остаточных классах ведутся по правилам сложения, вычитания и умножения этих классов.
 
 #### 2.4.8. Вычисления в остаточных классах
 Для вычислений в остаточных классах используются те же самые правила, что и для обычных чисел, с той разницей, что все результаты берутся по модулю. Например:
-- Сложение: \((a \pmod{n}) + (b \pmod{n}) \equiv (a + b) \pmod{n}\)
-- Вычитание: \((a \pmod{n}) - (b \pmod{n}) \equiv (a - b) \pmod{n}\)
-- Умножение: \((a \pmod{n}) \times (b \pmod{n}) \equiv (a \times b) \pmod{n}\)
+- Сложение: \($(a \pmod{n}) + (b \pmod{n}) \equiv (a + b) \pmod{n}$\)
+- Вычитание: \($(a \pmod{n}) - (b \pmod{n}) \equiv (a - b) \pmod{n}$\)
+- Умножение: \($(a \pmod{n}) \times (b \pmod{n}) \equiv (a \times b) \pmod{n}$\)
 
 ### 22. Векторные пространства (разделы 2.5.1-2.5.4)
 
@@ -451,27 +451,27 @@ x \equiv a_k \pmod{n_k}
 Векторное пространство над полем \(F\) — это множество \(V\) вместе с двумя операциями: сложение векторов и умножение вектора на скаляр из \(F\), которые удовлетворяют восьми аксиомам (ассоциативность, коммутативность сложения, нейтральный элемент, противоположный элемент, дистрибутивность и т.д.).
 
 #### 2.5.2. Линейные комбинации
-Линейная комбинация векторов \(v_1, v_2, ..., v_n \in V\) с коэффициентами \(a_1, a_2, ..., a_n \in F\) — это вектор вида \(a_1 v_1 + a_2 v_2 + ... + a_n v_n\).
+Линейная комбинация векторов \($v_1, v_2, ..., v_n \in V$\) с коэффициентами \($a_1, a_2, ..., a_n \in F$\) — это вектор вида \($a_1 v_1 + a_2 v_2 + ... + a_n v_n$\).
 
 #### 2.5.3. Базис и размерность
 Базис векторного пространства \(V\) — это множество линейно независимых векторов, таких что любой вектор из \(V\) можно выразить как линейную комбинацию базисных векторов. Размерность векторного пространства — это количество векторов в базисе.
 
 #### 2.5.4. Конечные поля
-Конечное поле (или поле Галуа) — это поле с конечным числом элементов. Например, поле \(\mathbb{F}_p\), где \(p\) — простое число, состоит из элементов \(\{0, 1, 2, ..., p-1\}\) с операциями сложения и умножения по модулю \(p\).
+Конечное поле (или поле Галуа) — это поле с конечным числом элементов. Например, поле \($\mathbb{F}_p$\), где \(p\) — простое число, состоит из элементов \(\{0, 1, 2, ..., p-1\}\) с операциями сложения и умножения по модулю \(p\).
 
 ### 23. Решётки и булевы алгебры (разделы 2.6.1-2.6.6)
 
 #### 2.6.1. Дистрибутивные и ограниченные решётки
 Решётка — это частично упорядоченное множество, в котором любые два элемента имеют наибольшую нижнюю и наименьшую верхнюю границы. Решётка называется дистрибутивной, если выполняется дистрибутивное свойство:
-\[ a \land (b \lor c) = (a \land b) \lor (a \land c) \]
+\[ $a \land (b \lor c) = (a \land b) \lor (a \land c)$ \]
 
 #### 2.6.2. Решётки с дополнением
 Решётка с дополнением — это решётка, в которой каждый элемент имеет дополнение, такое что:
-\[ a \lor a' = 1 \]
-\[ a \land a' = 0 \]
+$$ a \lor a' = 1 $$
+$$ a \land a' = 0 $$
 
 #### 2.6.3. Частичный порядок в решётке
-Частичный порядок в решётке определяется отношением \( \leq \), которое является рефлексивным, антисимметричным и транзитивным.
+Частичный порядок в решётке определяется отношением \($ \leq $\), которое является рефлексивным, антисимметричным и транзитивным.
 
 #### 2.6.4. Полные решётки
 Полная решётка — это решётка, в которой каждая подмножество имеет наименьшую верхнюю и наибольшую нижнюю границы.
@@ -483,29 +483,29 @@ x \equiv a_k \pmod{n_k}
 
 #### 2.6.6. Булевы алгебры
 Булева алгебра — это дистрибутивная решётка с дополнением, в которой для любых элементов \(a\) и \(b\) выполняется:
-\[ a \lor a' = 1 \]
-\[ a \land a' = 0 \]
-\[ a \lor b = b \lor a \]
-\[ a \land b = b \land a \]
+$$ a \lor a' = 1 $$
+$$ a \land a' = 0 $$
+$$ a \lor b = b \lor a $$
+$$ a \land b = b \land a $$
 
 ### 24. Матроиды и жадные алгоритмы (разделы 2.7.1-2.7.6)
 
 #### 2.7.1. Введение в матроиды
-Матроид — это структура, обобщающая понятия линейной независимости из линейной алгебры. Матроид \(M\) определяется как пара \((E, \mathcal{I})\), где \(E\) — конечное множество, а \(\mathcal{I}\) — семейство подмножеств \(E\), называемых независимыми множествами, удовлетворяющих следующим аксиомам:
-1. Пустое множество является независимым, то есть \(\emptyset \in \mathcal{I}\).
+Матроид — это структура, обобщающая понятия линейной независимости из линейной алгебры. Матроид \(M\) определяется как пара \($(E, \mathcal{I})$\), где \(E\) — конечное множество, а \($\mathcal{I}$\) — семейство подмножеств \(E\), называемых независимыми множествами, удовлетворяющих следующим аксиомам:
+1. Пустое множество является независимым, то есть \($\emptyset \in \mathcal{I}$\).
 2. Любое подмножество независимого множества также является независимым (наследственное свойство).
 3. Если \(A\) и \(B\) — два независимых множества и \(A\) больше по размеру, чем \(B\), то существует элемент в \(A\), которого нет в \(B\), добавление которого к \(B\) даст независимое множество.
 
 #### 2.7.2. Примеры матроидов
-- **Линейные матроиды**: Если \(E\) — множество векторов, а \(\mathcal{I}\) — множество линейно независимых подмножеств \(E\), то \((E, \mathcal{I})\) образует матроид.
-- **Графовые матроиды**: Если \(E\) — множество рёбер графа, а \(\mathcal{I}\) — множество остовов (подграфов без циклов), то \((E, \mathcal{I})\) является матроидом.
+- **Линейные матроиды**: Если \(E\) — множество векторов, а \($\mathcal{I}$\) — множество линейно независимых подмножеств \(E\), то \($(E, \mathcal{I})$\) образует матроид.
+- **Графовые матроиды**: Если \(E\) — множество рёбер графа, а \($\mathcal{I}$\) — множество остовов (подграфов без циклов), то \($(E, \mathcal{I})$\) является матроидом.
 
 #### 2.7.3. Замкнутые множества и ранги
 Замкнутое множество (closure) матроида \(M\) — это множество элементов, которое остаётся неизменным при добавлении любых зависимых элементов. Ранг матроида — это максимальный размер независимого множества.
 
 #### 2.7.4. Операции над матроидами
-- **Сужение** (restriction): Если \(A \subseteq E\), то сужение \(M\) на \(A\) — это матроид \(M|A\) с элементами \(A\) и независимыми множествами, которые являются подмножествами \(A\) и независимы в \(M\).
-- **Сжатие** (contraction): Если \(B \subseteq E\) — базис, то сжатие \(M\) по \(B\) — это матроид \(M/B\) с элементами \(E - B\).
+- **Сужение** (restriction): Если \($A \subseteq E$\), то сужение \(M\) на \(A\) — это матроид \(M|A\) с элементами \(A\) и независимыми множествами, которые являются подмножествами \(A\) и независимы в \(M\).
+- **Сжатие** (contraction): Если \($B \subseteq E$\) — базис, то сжатие \(M\) по \(B\) — это матроид \(M/B\) с элементами \(E - B\).
 
 #### 2.7.5. Жадные алгоритмы
 Жадные алгоритмы используют стратегию выбора наилучшего локального решения на каждом шагу с надеждой, что это приведёт к глобально оптимальному решению. Для матроидов жадные алгоритмы гарантированно находят оптимальное решение, что является одним из ключевых свойств этих структур.
@@ -556,7 +556,7 @@ x \equiv a_k \pmod{n_k}
 ### 27. Двойственность и симметрия (разделы 3.3.1-3.3.4)
 
 #### 3.3.1. Принцип двойственности
-Принцип двойственности в булевой алгебре утверждает, что если в любом правильном булевом выражении заменить каждую операцию AND на OR и наоборот, а также заменить 0 на 1 и наоборот, то полученное выражение также будет правильным. Например, двойственным выражением для \(A \land (B \lor C)\) будет \((A \lor B) \land (A \lor C)\).
+Принцип двойственности в булевой алгебре утверждает, что если в любом правильном булевом выражении заменить каждую операцию AND на OR и наоборот, а также заменить 0 на 1 и наоборот, то полученное выражение также будет правильным. Например, двойственным выражением для \($ A \land (B \lor C)$\) будет \($(A \lor B) \land (A \lor C) $\).
 
 #### 3.3.2. Теоремы двойственности
 Теоремы двойственности утверждают, что если булева формула истинна, то её двойственная формула также будет истинной. Это используется для упрощения и преобразования булевых выражений.
@@ -572,17 +572,17 @@ x \equiv a_k \pmod{n_k}
 
 #### 3.4.1. Конъюнктивная нормальная форма (КНФ)
 Конъюнктивная нормальная форма (КНФ) булевой функции представляет собой конъюнкцию дизъюнктов, где каждый дизъюнкт состоит из переменных или их отрицаний. Формула в КНФ записывается как:
-\[ (x_1 \lor \neg x_2 \lor x_3) \land (\neg x_1 \lor x_2 \lor \neg x_3) \]
+\[$ (x_1 \lor \neg x_2 \lor x_3) \land (\neg x_1 \lor x_2 \lor \neg x_3)$ \]
 Это выражение истинно, если хотя бы одна переменная в каждом дизъюнкте принимает значение "истина".
 
 #### 3.4.2. Дизъюнктивная нормальная форма (ДНФ)
 Дизъюнктивная нормальная форма (ДНФ) булевой функции представляет собой дизъюнкцию конъюнктов, где каждый конъюнкт состоит из переменных или их отрицаний. Формула в ДНФ записывается как:
-\[ (x_1 \land \neg x_2 \land x_3) \lor (\neg x_1 \land x_2 \land \neg x_3) \]
+\[ $(x_1 \land \neg x_2 \land x_3) \lor (\neg x_1 \land x_2 \land \neg x_3)$ \]
 Это выражение истинно, если хотя бы один конъюнкт принимает значение "истина".
 
 #### 3.4.3. Совершенная дизъюнктивная нормальная форма (СДНФ)
 Совершенная дизъюнктивная нормальная форма (СДНФ) — это специальный вид ДНФ, где каждый конъюнкт включает все переменные функции, либо в прямой форме, либо в отрицании. СДНФ выражает функцию точно по её таблице истинности, например:
-\[ (x_1 \land \neg x_2) \lor (\neg x_1 \land x_2) \]
+\[ $(x_1 \land \neg x_2) \lor (\neg x_1 \land x_2)$ \]
 
 #### 3.4.4. Преобразование булевых функций в нормальные формы
 Преобразование булевой функции в КНФ или ДНФ осуществляется через её таблицу истинности и логические преобразования. Для СДНФ необходимо учесть все строки таблицы истинности, где функция принимает значение "истина".
@@ -606,7 +606,7 @@ x \equiv a_k \pmod{n_k}
 |  1 |  1 |     0     |
 
 Минимальная форма будет:
-\[ f(x_1, x_2) = x_1 \oplus x_2 \]
+\[$ f(x_1, x_2) = x_1 \oplus x_2 $\]
 
 ### 30. Представление булевых функций в программах (разделы 3.5.1-3.5.4)
 
@@ -649,15 +649,15 @@ bool isValid = (input != null) && (input.length() > 0);
 - **Логические связки**: операции, такие как конъюнкция (AND), дизъюнкция (OR), отрицание (NOT), импликация (→), эквивалентность (↔).
 
 #### 4.3.4. Теорема дедукции
-Теорема дедукции утверждает, что если в контексте множества аксиом \(A\) можно вывести \(B\) из \(A \cup \{C\}\), то в контексте множества аксиом \(A\) можно вывести импликацию \(C \rightarrow B\). Формально:
-\[ A \cup \{C\} \vdash B \implies A \vdash (C \rightarrow B) \]
+Теорема дедукции утверждает, что если в контексте множества аксиом \(A\) можно вывести \(B\) из \($A \cup \{C\}$\), то в контексте множества аксиом \(A\) можно вывести импликацию \($C \rightarrow B$\). Формально:
+\[$ A \cup \{C\} \vdash B \implies A \vdash (C \rightarrow B) $\]
 
 #### 4.3.5. Примеры применения теоремы дедукции
-Теорема дедукции используется для упрощения доказательств. Например, если известно, что \( A \cup \{C\} \vdash B \), то можно выводить \( C \rightarrow B \) из \( A \).
+Теорема дедукции используется для упрощения доказательств. Например, если известно, что \( $A \cup \{C\} \vdash B $\), то можно выводить \( $C \rightarrow B$ \) из \( A \).
 
 #### 4.3.6. Принципы и правила вывода в исчислении высказываний
 Основные правила вывода в ИВ включают:
-- **Modus Ponens**: из \( A \) и \( A \rightarrow B \) выводим \( B \).
+- **Modus Ponens**: из \( A \) и \($ A \rightarrow B$ \) выводим \( B \).
 - **Правило подстановки**: заменяя переменные в теоремах на любые выражения, получаем новые теоремы.
 
 #### 4.3.7. Непротиворечивость и полнота исчисления высказываний
@@ -671,20 +671,20 @@ bool isValid = (input != null) && (input.length() > 0);
 #### 4.4.1. Исчисление предикатов первого порядка
 Исчисление предикатов (ИП) первого порядка расширяет ИВ, вводя кванторы и предикаты. Основные элементы включают:
 - **Предикаты**: функции, возвращающие истинность или ложность в зависимости от входных значений.
-- **Кванторы**: всеобщности (\(\forall\)) и существования (\(\exists\)).
+- **Кванторы**: всеобщности (\($\forall$\)) и существования (\($\exists$\)).
 
 #### 4.4.2. Формулы и термы
 Формулы в ИП строятся из предикатов и термов (переменных, констант, функций). Примеры формул:
-\[ \forall x (P(x) \rightarrow Q(x)) \]
-\[ \exists y (R(y) \land S(y)) \]
+\[$ \forall x (P(x) \rightarrow Q(x)) $\]
+\[$ \exists y (R(y) \land S(y)) $\]
 
 #### 4.4.3. Семиотика исчисления предикатов
 Семиотика описывает использование символов и выражений в ИП. Важные элементы включают символы для переменных, функций, предикатов и логических связок.
 
 #### 4.4.4. Правила вывода для исчисления предикатов
 Основные правила вывода включают обобщение (Generalization) и спецификацию (Specification):
-- **Generalization**: из \( P(x) \) выводится \( \forall x P(x) \).
-- **Specification**: из \( \forall x P(x) \) выводится \( P(c) \) для любой константы \( c \).
+- **Generalization**: из \( P(x) \) выводится \($ \forall x P(x) $\).
+- **Specification**: из \($ \forall x P(x)$ \) выводится \( P(c) \) для любой константы \( c \).
 
 #### 4.4.5. Модели и интерпретации
 Модель интерпретирует символы и выражения ИП в терминах объектов и отношений. Интерпретация определяет, какие формулы истинны в данной модели.
@@ -733,31 +733,31 @@ bool isValid = (input != null) && (input.length() > 0);
 2. **Рекурсивно аксиоматизированной** (имеет конечное или рекурсивно перечислимое множество аксиом),
 3. **Достаточно мощной**, чтобы выразить арифметику естественных чисел,
 
-то существует формула \( \phi \), такая что:
-- \( \phi \) истинна в стандартной модели натуральных чисел.
-- \( \phi \) недоказуема в системе \( \mathcal{S} \).
+то существует формула \($ \phi $\), такая что:
+- \($ \phi $\) истинна в стандартной модели натуральных чисел.
+- \($ \phi $\) недоказуема в системе \( $\mathcal{S}$ \).
 
-Эта формула \( \phi \) конструируется так, чтобы утверждать о своей недоказуемости. Грубо говоря, \( \phi \) говорит: "Я недоказуема в системе \( \mathcal{S} \)".
+Эта формула \( $\phi$ \) конструируется так, чтобы утверждать о своей недоказуемости. Грубо говоря, \( $\phi$ \) говорит: "Я недоказуема в системе \( $\mathcal{S}$ \)".
 
 #### 4.5.9 Доказательство первой теоремы Гёделя о неполноте
 
 Доказательство теоремы Гёделя о неполноте можно разделить на несколько ключевых этапов:
 
 1. **Гёделева нумерация**:
-   Каждому символу, формуле и доказательству в формальной системе присваивается уникальный натуральный номер. Этот процесс называется Гёделевой нумерацией. Например, формуле \( \phi \) соответствует число \( \#\phi \).
+   Каждому символу, формуле и доказательству в формальной системе присваивается уникальный натуральный номер. Этот процесс называется Гёделевой нумерацией. Например, формуле \( $\phi$ \) соответствует число \( $\#\phi$ \).
 
 2. **Диагонализация**:
-   С помощью диагонального аргумента строится формула, которая утверждает свою недоказуемость. Диагональная лемма позволяет конструировать формулу \( \psi \), такую что \( \psi \leftrightarrow \neg \text{Prov}(\#\psi) \), где \( \text{Prov}(x) \) — предикат, означающий, что \( x \) является номером доказуемой формулы.
+   С помощью диагонального аргумента строится формула, которая утверждает свою недоказуемость. Диагональная лемма позволяет конструировать формулу \( $\psi$ \), такую что \( $\psi \leftrightarrow \neg \text{Prov}(\#\psi)$ \), где \($ \text{Prov}(x) $\) — предикат, означающий, что \( x \) является номером доказуемой формулы.
 
-3. **Конструкция утверждения \( \phi \)**:
-   Формула \( \phi \) создается как \( \phi \leftrightarrow \neg \text{Prov}(\#\phi) \). Если \( \phi \) была бы доказуема, то \( \text{Prov}(\#\phi) \) было бы истинным, что привело бы к противоречию, поскольку \( \phi \leftrоть=\) должно быть ложным. Следовательно, \( \phi \) недоказуема в системе.
+3. **Конструкция утверждения \( $\phi$ \)**:
+   Формула \($ \phi $\) создается как \($ \phi \leftrightarrow \neg \text{Prov}(\#\phi) $\). Если \($ \phi $\) была бы доказуема, то \($ \text{Prov}(\#\phi) $\) было бы истинным, что привело бы к противоречию, поскольку \( $\phi$\) должно быть ложным. Следовательно, \($ \phi $\) недоказуема в системе.
 
 4. **Анализ истинности и недоказуемости**:
    Рассмотрим два случая:
-   - Если \( \phi \) истинна, то она недоказуема (так как иначе было бы противоречие).
-   - Если \( \phi \) ложна, то \( \neg \phi \) истинна и доказуема, что снова приводит к противоречию.
+   - Если \($ \phi $\) истинна, то она недоказуема (так как иначе было бы противоречие).
+   - Если \($ \phi $\) ложна, то \($ \neg \phi $\) истинна и доказуема, что снова приводит к противоречию.
 
-Таким образом, \( \phi \) истинна, но недоказуема в системе \( \mathcal{S} \).
+Таким образом, \($ \phi $\) истинна, но недоказуема в системе \($ \mathcal{S}$ \).
 
 ##### Заключение
 
